--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
                     <div class="profile-image-wrapper">
                         <div class="profile-border"></div>
                         <div class="profile-image">
-                            <img src="assets/img/profile/PHOTO.jpg" alt="Profile Photo"
+                            <img src="assets/img/profile/PHOTO.png" alt="Profile Photo"
                                 style="width: 100%; height: 100%; object-fit: cover;">
                         </div>
                         <div class="profile-glow"></div>
                     </div>
                     <div class="profile-info">
                         <h3>Subhankar Das</h3>
-                        <p>Creative Developer</p>
+                        <p>Web Developer</p>
                         <div class="profile-badges">
                             <span class="badge">Available for Work</span>
                             <span class="badge">Remote</span>
@@ -371,8 +371,8 @@
                 <div class="timeline-item" data-aos="fade-right">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <span class="timeline-year">2023 - Present</span>
-                        <h3>Senior Design Engineer</h3>
+                        <span class="timeline-year">2025 - Present</span>
+                        <h3>Design Engineer</h3>
                         <p>Leading design and development initiatives for cutting-edge digital products at a top tech
                             company. Managing cross-functional teams and driving innovation.</p>
                         <div class="timeline-tags">
@@ -386,7 +386,7 @@
                 <div class="timeline-item" data-aos="fade-left">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <span class="timeline-year">2020 - 2023</span>
+                        <span class="timeline-year">2024-2025</span>
                         <h3>Full Stack Developer</h3>
                         <p>Architected and delivered multiple high-impact web applications for global clients.
                             Specialized in modern JavaScript frameworks and cloud technologies.</p>
@@ -401,7 +401,7 @@
                 <div class="timeline-item" data-aos="fade-right">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <span class="timeline-year">2018 - 2020</span>
+                        <span class="timeline-year">2022 - 2024</span>
                         <h3>UI/UX Designer</h3>
                         <p>Designed intuitive interfaces for mobile and web applications. Conducted user research and
                             created design systems for multiple brands.</p>
@@ -416,7 +416,7 @@
                 <div class="timeline-item" data-aos="fade-left">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <span class="timeline-year">2016 - 2018</span>
+                        <span class="timeline-year">2021 - 2022</span>
                         <h3>Junior Developer</h3>
                         <p>Started my journey in web development, mastering fundamentals and building responsive
                             websites. Collaborated with senior developers on various projects.</p>
